--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="zip.moodio" >
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <!-- Splash screen -->
         <activity
             android:name=".SplashScreen"
@@ -14,6 +16,7 @@
             android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,6 +27,10 @@
         <activity
             android:name=".Database"
             android:label="@string/title_activity_database" >
+        </activity>
+        <activity
+            android:name=".LogActivity"
+            android:label="@string/title_activity_log" >
         </activity>
     </application>
 
